src/test/deca/context/invalid/homemade/print_method_decompile.res
class A extends Object {
	void x() {
	}
}
{
	A a = new A();
	println(a.x);
}
